Put max-width on mobile version 330px, and fix file input

--- a/Session_07_second_project/styles/form-light.css
+++ b/Session_07_second_project/styles/form-light.css
@@ -7,7 +7,7 @@ form {
   background-color: var(--c-canvas-highlight);
   border-radius: 15px;
   margin: 0 4rem;
-  
+  max-width: 330px;
 }
 
 /* Form header */
@@ -189,6 +189,11 @@ input[type="number"] {
 input[type="radio"] {
   accent-color: var(--c-input-border);
   border: 1px solid;
+}
+
+input[type="file"] {
+  width: 100%;
+  max-width: 100%;
 }
 
 input,
